update lock if have sub menu

--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -71,6 +71,9 @@ header {
                                 font-size: 1.6rem;
                                 font-weight: 500;
                                 @include flexcenter();
+                                &.lock{
+                                    pointer-events: none;
+                                }
                             }
 
                             .sub-menu {
