--- a/templates/single-slot_game.twig
+++ b/templates/single-slot_game.twig
@@ -1,8 +1,9 @@
 {% extends "base.twig" %}
 {% block content %}
+{% set content = TimberPost(options_h_blockgame.h_link) %}
 <section class="box-list-game">
 	<div class="container">
-		<div id="{{ post.id }}" class="row game-list"></div>
+		<div id="{{ post.id }}" class="row game-list" data-slug="{{ content.postslug }}"></div>
 	</div>
 </section>
 {% endblock %}
